tests/snapshots/render/ansi@commonmark-spec-290-list_items.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/290-list_items.md
snapshot_kind: text
---
 1. A paragraph with two lines.

    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0m[33mindented code[0m                                                           [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m

    [90m▌ [0m[3mA block quote.[0m
