tests/snapshots/render/ansi@commonmark-spec-309-lists.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/309-lists.md
snapshot_kind: text
---
• foo

  notcode

• foo

[32m<!-- -->
[0m
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mcode[0m                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
