tests/snapshots/render/ansi@commonmark-spec-313-lists.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/313-lists.md
snapshot_kind: text
---
 1. a

 2. b

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m3. c[0m                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
