tests/snapshots/render/ansi@commonmark-spec-320-lists.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/320-lists.md
snapshot_kind: text
---
• a
  [90m▌ [0m[3mb[0m

• c
