tests/snapshots/render/ansi@commonmark-spec-321-lists.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/321-lists.md
---
• a
  [90m▌ [0m[3mb[0m

  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0mc                                                                         [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m

• d
