tests/snapshots/render/ansi@commonmark-spec-324-lists.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/324-lists.md
---
 1. 
    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0mfoo                                                                     [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m

    bar
